fix a problem when you send a long word appears the x scrollbar

--- a/public/chat/styles.css
+++ b/public/chat/styles.css
@@ -147,7 +147,7 @@ body {
 
 .message p {
     font-size: larger;
-    overflow-wrap: break-word
+    overflow-wrap: anywhere;
 }
 
 .command {
